@@ -6,5 +6,5 @@ perl:
     - '5.16'
     - '5.14'
 install:       cpanm -n --skip-satisfied Devel::Cover::Report::Coveralls
-script:        PERL5OPT=-MDevel::Cover prove -lv t xt
+script:        PERL5OPT=-MDevel::Cover prove -lv t xt/all.t
 after_success: cover -report coveralls -select_re ^lib/
